# property-management-voice-agent

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
apps/web/: .env.example  next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(app)/: layout.tsx
apps/web/app/sign-in/: page.tsx
apps/web/components/: app-access-provider.tsx  app-shell.tsx  auth-gate.tsx  onboarding-wizard.tsx  public-top-nav.tsx  sign-in-form.tsx
apps/web/lib/: app-access.ts  database.types.ts  server-auth.ts  voice-api.ts
design/: README.md  component-inventory.md  design-direction.md  design-system.md
design/pages/: catalog.md  dashboard.md  landing-and-auth.md  onboarding.md  settings.md  units.md
design/wireframes/: catalog.md  dashboard.md  landing.md  onboarding.md  settings.md  sign-in.md  units.md
docs/: voice-ticketing-architecture.md  voice-ticketing-implementation-plan.md
services/voice-api/: .env.example  README.md  pyproject.toml  requirements.txt
services/voice-api/app/: __init__.py  main.py
services/voice-api/app/api/: __init__.py  catalog.py  health.py  provisioning.py  tools.py
services/voice-api/app/clients/: __init__.py  gemini.py  storage.py  vapi.py
services/voice-api/app/core/: __init__.py  config.py
services/voice-api/app/db/: __init__.py  pool.py
services/voice-api/app/services/: __init__.py  catalog.py  provisioning.py  tools.py
services/voice-api/app/tools/: __init__.py
supabase/: config.toml  seed.sql
supabase/migrations/: 20260324170000_initial_schema.sql
(+13 files in other folders)
