[project]
name = "voice-api"
version = "0.1.0"
description = "FastAPI service for property management voice ticketing."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "asyncpg>=0.30,<1.0",
  "fastapi>=0.115,<1.0",
  "pydantic-settings>=2.6,<3.0",
  "pypdf>=5.4,<6.0",
  "uvicorn[standard]>=0.34,<1.0"
]

[dependency-groups]
dev = [
  "ruff>=0.11,<1.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
